--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,17 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --slate: #94a3b8;
+  --background: #0f172a;
+  --primary: #8b5cf6;
+  --accent: #e2e8f0;
 }
 
 a {
@@ -28,6 +33,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   width: 100%;
+  background-color: var(--background);
 }
 
 h1 {
