--- a/src/App.css
+++ b/src/App.css
@@ -12,22 +12,22 @@
 }
 
 .section-title {
-  font-size: 2.5rem;
-  font-weight: 500;
+  font-size: 3rem;
+  font-weight: 550;
+  font-family: NTR, Arial, sans-serif;
   color: var(--accent);
-  text-align: center;
+  text-align: left;
   position: relative;
   margin-bottom: 5rem;
   display: inline-block;
 }
 
-.section-title::after {
-  content: "";
-  position: absolute;
-  bottom: -10px;
-  left: 0;
+.section-header {
+  text-align: left;
   width: 100%;
-  height: 4px;
-  background: linear-gradient(90deg, var(--primary), #3b82f6);
-  border-radius: 2px;
+  align-items: center;
+  background-color: var(--background);
+  margin: auto;
+  max-width: 1100px;
+  padding-top: 100px;
 }
