--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,7 +2,7 @@
   align-items: center;
   background-color: var(--background);
   margin: auto;
-  max-width: 1000px;
+  max-width: 1100px;
   padding-top: 100px;
 }
 
@@ -54,6 +54,7 @@
 @media (max-width: 768px) {
   .about-content {
     flex-direction: column;
+    align-items: center;
   }
 
   .about-description {
